fixes question out of screen

--- a/src/Layout/Question/Question.scss
+++ b/src/Layout/Question/Question.scss
@@ -33,7 +33,7 @@
 
 .question {
   height: 100vh;
-  width: 95%;
+  width: 100%;
 
   .progressBar {
     position: absolute;
@@ -59,6 +59,7 @@
     width: 100%;
     top: 3.5vh;
     box-sizing: border-box;
+    padding: 0 1% 0 0;
     margin: 12px 5px 5px 5px;
     text-align: center;
     // background-color: white;
